[Added] AbstractFactory [Added] tests [NewVersion] 0.0.2

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,4 +5,5 @@ services:
     working_dir: /home/node
     volumes:
       - ./:/home/node
+    command: bash -c "[ -d 'node_modules' ] || npm i && npm t"
 
