--- a/.travis.yml
+++ b/.travis.yml
@@ -6,8 +6,8 @@ script:
   - npm test
 
 after_success:
-    - npm install ci-publish
-    - $(npm bin)/ci-publish || true
+    - npm install -g ci-publish
+    - ci-publish || true
 deploy:
   provider: releases
   api_key: $RELEASE_API_TOKEN
