--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "name": "zerojs-di",
-    "version": "0.0.7",
+    "version": "0.0.71",
     "description": "Factory-Driven Dependency Injection Container",
+    "main": "src/di/di.js",
     "repository": {
         "type": "git",
         "url": "https://github.com/zerosuxx/zerojs-di.git"
